--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "description": "Auto test firewall",
   "main": "index.js",
+  "scripts": {
+    "start": "node runtest.js"
+  },
   "author": "Tran Ngoc Tin",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^3.0.0",
+    "csv-writer": "^1.5.0",
+    "dotenv": "^8.2.0",
     "n-readlines": "^1.0.0",
     "node-fetch": "^2.6.0",
     "puppeteer": "^1.19.0"
